# These files will end up in the install include directory
# For example, /usr/include
libclinalg_includedir = $(pkgincludedir)

libclinalg_include_DATA = \
	matrix/c_vector.h\
	matrix/c_matrix.h\
	matrix/c_matrixops.h\
	matrix/c_vectorops.h\
	c_linalg_lu.h\
	c_linalg_cholesky.h\
	c_linalg_qr.h\
	c_linalg_sv.h\
	c_linalg.h
